Fix SWR dropdown visibility in dark mode

--- a/apps/client/src/app/pages/portfolio/fire/fire-page.scss
+++ b/apps/client/src/app/pages/portfolio/fire/fire-page.scss
@@ -29,5 +29,10 @@
     @include select-arrow(variables.$light-primary-text);
 
     color: rgb(var(--light-primary-text));
+
+    option {
+      color: rgb(var(--dark-primary-text));
+      background-color: rgb(var(--light-background));
+    }
   }
 }
